--- a/platformio.ini
+++ b/platformio.ini
@@ -11,12 +11,11 @@
 [env:um_tinys3]
 platform = espressif32 @^6.3.1
 platform_packages = 
-	framework-arduinoespressif32 @^3.0.5
+	framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git
 
 board = um_tinys3
 framework = arduino
 lib_deps = 
   ;moononournation/GFX Library for Arduino@^1.3.1
-  ;adafruit/Adafruit ST7735 and ST7789 Library@^1.9.3
   https://github.com/moononournation/Arduino_GFX.git
   https://github.com/bitbank2/JPEGDEC.git
